[gd_scene load_steps=4 format=4 uid="uid://cf0cjapi57xod"]

[ext_resource type="PackedScene" uid="uid://d0urka1r7ke00" path="res://场景/level/level.tscn" id="1_p4txw"]
[ext_resource type="Script" path="res://场景/level/battle_level.gd" id="2_8hqyx"]
[ext_resource type="PackedScene" uid="uid://78wt1kdiarjq" path="res://场景/地图/敌人生成/enemy_generate.tscn" id="3_6gcv5"]

[node name="BattleLevel" instance=ExtResource("1_p4txw")]
script = ExtResource("2_8hqyx")

[node name="TileMapLayer" parent="tile" index="0"]
tile_map_data = PackedByteArray("AADw//f/AQAEAAUAAADw//j/AQAEAAUAAADw//n/AQAEAAUAAADw//r/AQAEAAUAAADw//v/AQAEAAUAAADw//z/AQAEAAUAAADw//3/AQAEAAUAAADw//7/AQAEAAUAAADw////AQAEAAUAAADw/wAAAQAEAAUAAADw/wEAAQAEAAUAAADw/wIAAQAEAAUAAADw/wMAAQAEAAUAAADw/wQAAQAEAAUAAADw/wUAAQAEAAUAAADw/wYAAQAEAAUAAADw/wcAAQAEAAUAAADw/wgAAQAEAAUAAADx//f/AQAEAAUAAADx//j/AQAEAAUAAADx//n/AQAEAAUAAADx//r/AQAEAAUAAADx//v/AQAEAAUAAADx//z/AQAEAAUAAADx//3/AQAEAAUAAADx//7/AQAEAAUAAADx////AQAEAAUAAADx/wAAAQAEAAUAAADx/wEAAQAEAAUAAADx/wIAAQAEAAUAAADx/wMAAQAEAAUAAADx/wQAAQAEAAUAAADx/wUAAQAEAAUAAADx/wYAAQAEAAUAAADx/wcAAQAEAAUAAADx/wgAAQAEAAUAAADy//f/AQAEAAUAAADy//j/AQAEAAUAAADy//n/AQAEAAUAAADy//r/AQAEAAUAAADy//v/AQAEAAUAAADy//z/AQAEAAUAAADy//3/AQAEAAUAAADy//7/AQAEAAUAAADy////AQAEAAUAAADy/wAAAQAEAAUAAADy/wEAAQAEAAUAAADy/wIAAQAEAAUAAADy/wMAAQAEAAUAAADy/wQAAQAEAAUAAADy/wUAAQAEAAUAAADy/wYAAQAEAAUAAADy/wcAAQAEAAUAAADy/wgAAQAEAAUAAADz//f/AQAEAAUAAADz//j/AQAEAAUAAADz//n/AQAEAAUAAADz//r/AQAEAAUAAADz//v/AQAEAAUAAADz//z/AQAEAAUAAADz//3/AQAEAAUAAADz//7/AQAEAAUAAADz////AQAEAAUAAADz/wAAAQAEAAUAAADz/wEAAQAEAAUAAADz/wIAAQAEAAUAAADz/wMAAQAEAAUAAADz/wQAAQAEAAUAAADz/wUAAQAEAAUAAADz/wYAAQAEAAUAAADz/wcAAQAEAAUAAADz/wgAAQAEAAUAAAD0//f/AQAEAAUAAAD0//j/AQAEAAUAAAD0//n/AQAEAAUAAAD0//r/AQAEAAUAAAD0//v/AQAEAAUAAAD0//z/AQAEAAUAAAD0//3/AQAEAAUAAAD0//7/AQAEAAUAAAD0////AQAEAAUAAAD0/wAAAQAEAAUAAAD0/wEAAQAEAAUAAAD0/wIAAQAEAAUAAAD0/wMAAQAEAAUAAAD0/wQAAQAEAAUAAAD0/wUAAQAEAAUAAAD0/wYAAQAEAAUAAAD0/wcAAQAEAAUAAAD0/wgAAQAEAAUAAAD1//f/AQAEAAUAAAD1//j/AQAEAAUAAAD1//n/AQAEAAUAAAD1//r/AQAEAAUAAAD1//v/AQAEAAUAAAD1//z/AQAEAAUAAAD1//3/AQAEAAUAAAD1//7/AQAEAAUAAAD1////AQAEAAUAAAD1/wAAAQAEAAUAAAD1/wEAAQAEAAUAAAD1/wIAAQAEAAUAAAD1/wMAAQAEAAUAAAD1/wQAAQAEAAUAAAD1/wUAAQAEAAUAAAD1/wYAAQAEAAUAAAD1/wcAAQAEAAUAAAD1/wgAAQAEAAUAAAD2//f/AQAEAAUAAAD2//j/AQAEAAUAAAD2//n/AQAEAAUAAAD2//r/AQAEAAUAAAD2//v/AQAEAAUAAAD2//z/AQAEAAUAAAD2//3/AQAEAAUAAAD2//7/AQAEAAUAAAD2////AQAEAAUAAAD2/wAAAQAEAAUAAAD2/wEAAQAEAAUAAAD2/wIAAQAEAAUAAAD2/wMAAQAEAAUAAAD2/wQAAQAEAAUAAAD2/wUAAQAEAAUAAAD2/wYAAQAEAAUAAAD2/wcAAQAEAAUAAAD2/wgAAQAEAAUAAAD3//f/AQAEAAUAAAD3//j/AQAEAAUAAAD3//n/AQAEAAUAAAD3//r/AQAEAAUAAAD3//v/AQAEAAUAAAD3//z/AQAEAAUAAAD3//3/AQAEAAUAAAD3//7/AQAEAAUAAAD3////AQAEAAUAAAD3/wAAAQAEAAUAAAD3/wEAAQAEAAUAAAD3/wIAAQAEAAUAAAD3/wMAAQAEAAUAAAD3/wQAAQAEAAUAAAD3/wUAAQAEAAUAAAD3/wYAAQAEAAUAAAD3/wcAAQAEAAUAAAD3/wgAAQAEAAUAAAD4//f/AQAEAAUAAAD4//j/AQAEAAUAAAD4//n/AQAEAAUAAAD4//r/AQAEAAUAAAD4//v/AQAEAAUAAAD4//z/AQAEAAUAAAD4//3/AQAEAAUAAAD4//7/AQAEAAUAAAD4////AQAEAAUAAAD4/wAAAQAEAAUAAAD4/wEAAQAEAAUAAAD4/wIAAQAEAAUAAAD4/wMAAQAEAAUAAAD4/wQAAQAEAAUAAAD4/wUAAQAEAAUAAAD4/wYAAQAEAAUAAAD4/wcAAQAEAAUAAAD4/wgAAQAEAAUAAAD5//f/AQAEAAUAAAD5//j/AQAEAAUAAAD5//n/AQAEAAUAAAD5//r/AQAEAAUAAAD5//v/AQAEAAUAAAD5//z/AQAEAAUAAAD5//3/AQAEAAUAAAD5//7/AQAEAAUAAAD5////AQAEAAUAAAD5/wAAAQAEAAUAAAD5/wEAAQAEAAUAAAD5/wIAAQAEAAUAAAD5/wMAAQAEAAUAAAD5/wQAAQAEAAUAAAD5/wUAAQAEAAUAAAD5/wYAAQAEAAUAAAD5/wcAAQAEAAUAAAD5/wgAAQAEAAUAAAD6//f/AQAEAAUAAAD6//j/AQAEAAUAAAD6//n/AQAEAAUAAAD6//r/AQAEAAUAAAD6//v/AQAEAAUAAAD6//z/AQAEAAUAAAD6//3/AQAEAAUAAAD6//7/AQAEAAUAAAD6////AQAEAAUAAAD6/wAAAQAEAAUAAAD6/wEAAQAEAAUAAAD6/wIAAQAEAAUAAAD6/wMAAQAEAAUAAAD6/wQAAQAEAAUAAAD6/wUAAQAEAAUAAAD6/wYAAQAEAAUAAAD6/wcAAQAEAAUAAAD6/wgAAQAEAAUAAAD7//f/AQAEAAUAAAD7//j/AQAEAAUAAAD7//n/AQAEAAUAAAD7//r/AQAEAAUAAAD7//v/AQAEAAUAAAD7//z/AQAEAAUAAAD7//3/AQAEAAUAAAD7//7/AQAEAAUAAAD7////AQAEAAUAAAD7/wAAAQAEAAUAAAD7/wEAAQAEAAUAAAD7/wIAAQAEAAUAAAD7/wMAAQAEAAUAAAD7/wQAAQAEAAUAAAD7/wUAAQAEAAUAAAD7/wYAAQAEAAUAAAD7/wcAAQAEAAUAAAD7/wgAAQAEAAUAAAD8//f/AQAEAAUAAAD8//j/AQAEAAUAAAD8//n/AQAEAAUAAAD8//r/AQAEAAUAAAD8//v/AQAEAAUAAAD8//z/AQAEAAUAAAD8//3/AQAEAAUAAAD8//7/AQAEAAUAAAD8////AQAEAAUAAAD8/wAAAQAEAAUAAAD8/wEAAQAEAAUAAAD8/wIAAQAEAAUAAAD8/wMAAQAEAAUAAAD8/wQAAQAEAAUAAAD8/wUAAQAEAAUAAAD8/wYAAQAEAAUAAAD8/wcAAQAEAAUAAAD8/wgAAQAEAAUAAAD9//f/AQAEAAUAAAD9//j/AQAEAAUAAAD9//n/AQAEAAUAAAD9//r/AQAEAAUAAAD9//v/AQAEAAUAAAD9//z/AQAEAAUAAAD9//3/AQAEAAUAAAD9//7/AQAEAAUAAAD9////AQAEAAUAAAD9/wAAAQAEAAUAAAD9/wEAAQAEAAUAAAD9/wIAAQAEAAUAAAD9/wMAAQAEAAUAAAD9/wQAAQAEAAUAAAD9/wUAAQAEAAUAAAD9/wYAAQAEAAUAAAD9/wcAAQAEAAUAAAD9/wgAAQAEAAUAAAD+//f/AQAEAAUAAAD+//j/AQAEAAUAAAD+//n/AQAEAAUAAAD+//r/AQAEAAUAAAD+//v/AQAEAAUAAAD+//z/AQAEAAUAAAD+//3/AQAEAAUAAAD+//7/AQAEAAUAAAD+////AQAEAAUAAAD+/wAAAQAEAAUAAAD+/wEAAQAEAAUAAAD+/wIAAQAEAAUAAAD+/wMAAQAEAAUAAAD+/wQAAQAEAAUAAAD+/wUAAQAEAAUAAAD+/wYAAQAEAAUAAAD+/wcAAQAEAAUAAAD+/wgAAQAEAAUAAAD///f/AQAEAAUAAAD///j/AQAEAAUAAAD///n/AQAEAAUAAAD///r/AQAEAAUAAAD///v/AQAEAAUAAAD///z/AQAEAAUAAAD///3/AQAEAAUAAAD///7/AQAEAAUAAAD/////AQAEAAUAAAD//wAAAQAEAAUAAAD//wEAAQAEAAUAAAD//wIAAQAEAAUAAAD//wMAAQAEAAUAAAD//wQAAQAEAAUAAAD//wUAAQAEAAUAAAD//wYAAQAEAAUAAAD//wcAAQAEAAUAAAD//wgAAQAEAAUAAAAAAPf/AQAEAAUAAAAAAPj/AQAEAAUAAAAAAPn/AQAEAAUAAAAAAPr/AQAEAAUAAAAAAPv/AQAEAAUAAAAAAPz/AQAEAAUAAAAAAP3/AQAEAAUAAAAAAP7/AQAEAAUAAAAAAP//AQAEAAUAAAAAAAAAAQAEAAUAAAAAAAEAAQAEAAUAAAAAAAIAAQAEAAUAAAAAAAMAAQAEAAUAAAAAAAQAAQAEAAUAAAAAAAUAAQAEAAUAAAAAAAYAAQAEAAUAAAAAAAcAAQAEAAUAAAAAAAgAAQAEAAUAAAABAPf/AQAEAAUAAAABAPj/AQAEAAUAAAABAPn/AQAEAAUAAAABAPr/AQAEAAUAAAABAPv/AQAEAAUAAAABAPz/AQAEAAUAAAABAP3/AQAEAAUAAAABAP7/AQAEAAUAAAABAP//AQAEAAUAAAABAAAAAQAEAAUAAAABAAEAAQAEAAUAAAABAAIAAQAEAAUAAAABAAMAAQAEAAUAAAABAAQAAQAEAAUAAAABAAUAAQAEAAUAAAABAAYAAQAEAAUAAAABAAcAAQAEAAUAAAABAAgAAQAEAAUAAAACAPf/AQAEAAUAAAACAPj/AQAEAAUAAAACAPn/AQAEAAUAAAACAPr/AQAEAAUAAAACAPv/AQAEAAUAAAACAPz/AQAEAAUAAAACAP3/AQAEAAUAAAACAP7/AQAEAAUAAAACAP//AQAEAAUAAAACAAAAAQAEAAUAAAACAAEAAQAEAAUAAAACAAIAAQAEAAUAAAACAAMAAQAEAAUAAAACAAQAAQAEAAUAAAACAAUAAQAEAAUAAAACAAYAAQAEAAUAAAACAAcAAQAEAAUAAAACAAgAAQAEAAUAAAADAPf/AQAEAAUAAAADAPj/AQAEAAUAAAADAPn/AQAEAAUAAAADAPr/AQAEAAUAAAADAPv/AQAEAAUAAAADAPz/AQAEAAUAAAADAP3/AQAEAAUAAAADAP7/AQAEAAUAAAADAP//AQAEAAUAAAADAAAAAQAEAAUAAAADAAEAAQAEAAUAAAADAAIAAQAEAAUAAAADAAMAAQAEAAUAAAADAAQAAQAEAAUAAAADAAUAAQAEAAUAAAADAAYAAQAEAAUAAAADAAcAAQAEAAUAAAADAAgAAQAEAAUAAAAEAPf/AQAEAAUAAAAEAPj/AQAEAAUAAAAEAPn/AQAEAAUAAAAEAPr/AQAEAAUAAAAEAPv/AQAEAAUAAAAEAPz/AQAEAAUAAAAEAP3/AQAEAAUAAAAEAP7/AQAEAAUAAAAEAP//AQAEAAUAAAAEAAAAAQAEAAUAAAAEAAEAAQAEAAUAAAAEAAIAAQAEAAUAAAAEAAMAAQAEAAUAAAAEAAQAAQAEAAUAAAAEAAUAAQAEAAUAAAAEAAYAAQAEAAUAAAAEAAcAAQAEAAUAAAAEAAgAAQAEAAUAAAAFAPf/AQAEAAUAAAAFAPj/AQAEAAUAAAAFAPn/AQAEAAUAAAAFAPr/AQAEAAUAAAAFAPv/AQAEAAUAAAAFAPz/AQAEAAUAAAAFAP3/AQAEAAUAAAAFAP7/AQAEAAUAAAAFAP//AQAEAAUAAAAFAAAAAQAEAAUAAAAFAAEAAQAEAAUAAAAFAAIAAQAEAAUAAAAFAAMAAQAEAAUAAAAFAAQAAQAEAAUAAAAFAAUAAQAEAAUAAAAFAAYAAQAEAAUAAAAFAAcAAQAEAAUAAAAFAAgAAQAEAAUAAAAGAPf/AQAEAAUAAAAGAPj/AQAEAAUAAAAGAPn/AQAEAAUAAAAGAPr/AQAEAAUAAAAGAPv/AQAEAAUAAAAGAPz/AQAEAAUAAAAGAP3/AQAEAAUAAAAGAP7/AQAEAAUAAAAGAP//AQAEAAUAAAAGAAAAAQAEAAUAAAAGAAEAAQAEAAUAAAAGAAIAAQAEAAUAAAAGAAMAAQAEAAUAAAAGAAQAAQAEAAUAAAAGAAUAAQAEAAUAAAAGAAYAAQAEAAUAAAAGAAcAAQAEAAUAAAAGAAgAAQAEAAUAAAAHAPf/AQAEAAUAAAAHAPj/AQAEAAUAAAAHAPn/AQAEAAUAAAAHAPr/AQAEAAUAAAAHAPv/AQAEAAUAAAAHAPz/AQAEAAUAAAAHAP3/AQAEAAUAAAAHAP7/AQAEAAUAAAAHAP//AQAEAAUAAAAHAAAAAQAEAAUAAAAHAAEAAQAEAAUAAAAHAAIAAQAEAAUAAAAHAAMAAQAEAAUAAAAHAAQAAQAEAAUAAAAHAAUAAQAEAAUAAAAHAAYAAQAEAAUAAAAHAAcAAQAEAAUAAAAHAAgAAQAEAAUAAAAIAPf/AQAEAAUAAAAIAPj/AQAEAAUAAAAIAPn/AQAEAAUAAAAIAPr/AQAEAAUAAAAIAPv/AQAEAAUAAAAIAPz/AQAEAAUAAAAIAP3/AQAEAAUAAAAIAP7/AQAEAAUAAAAIAP//AQAEAAUAAAAIAAAAAQAEAAUAAAAIAAEAAQAEAAUAAAAIAAIAAQAEAAUAAAAIAAMAAQAEAAUAAAAIAAQAAQAEAAUAAAAIAAUAAQAEAAUAAAAIAAYAAQAEAAUAAAAIAAcAAQAEAAUAAAAIAAgAAQAEAAUAAAAJAPf/AQAEAAUAAAAJAPj/AQAEAAUAAAAJAPn/AQAEAAUAAAAJAPr/AQAEAAUAAAAJAPv/AQAEAAUAAAAJAPz/AQAEAAUAAAAJAP3/AQAEAAUAAAAJAP7/AQAEAAUAAAAJAP//AQAEAAUAAAAJAAAAAQAEAAUAAAAJAAEAAQAEAAUAAAAJAAIAAQAEAAUAAAAJAAMAAQAEAAUAAAAJAAQAAQAEAAUAAAAJAAUAAQAEAAUAAAAJAAYAAQAEAAUAAAAJAAcAAQAEAAUAAAAJAAgAAQAEAAUAAAAKAPf/AQAEAAUAAAAKAPj/AQAEAAUAAAAKAPn/AQAEAAUAAAAKAPr/AQAEAAUAAAAKAPv/AQAEAAUAAAAKAPz/AQAEAAUAAAAKAP3/AQAEAAUAAAAKAP7/AQAEAAUAAAAKAP//AQAEAAUAAAAKAAAAAQAEAAUAAAAKAAEAAQAEAAUAAAAKAAIAAQAEAAUAAAAKAAMAAQAEAAUAAAAKAAQAAQAEAAUAAAAKAAUAAQAEAAUAAAAKAAYAAQAEAAUAAAAKAAcAAQAEAAUAAAAKAAgAAQAEAAUAAAALAPf/AQAEAAUAAAALAPj/AQAEAAUAAAALAPn/AQAEAAUAAAALAPr/AQAEAAUAAAALAPv/AQAEAAUAAAALAPz/AQAEAAUAAAALAP3/AQAEAAUAAAALAP7/AQAEAAUAAAALAP//AQAEAAUAAAALAAAAAQAEAAUAAAALAAEAAQAEAAUAAAALAAIAAQAEAAUAAAALAAMAAQAEAAUAAAALAAQAAQAEAAUAAAALAAUAAQAEAAUAAAALAAYAAQAEAAUAAAALAAcAAQAEAAUAAAALAAgAAQAEAAUAAAAMAPf/AQAEAAUAAAAMAPj/AQAEAAUAAAAMAPn/AQAEAAUAAAAMAPr/AQAEAAUAAAAMAPv/AQAEAAUAAAAMAPz/AQAEAAUAAAAMAP3/AQAEAAUAAAAMAP7/AQAEAAUAAAAMAP//AQAEAAUAAAAMAAAAAQAEAAUAAAAMAAEAAQAEAAUAAAAMAAIAAQAEAAUAAAAMAAMAAQAEAAUAAAAMAAQAAQAEAAUAAAAMAAUAAQAEAAUAAAAMAAYAAQAEAAUAAAAMAAcAAQAEAAUAAAAMAAgAAQAEAAUAAAANAPf/AQAEAAUAAAANAPj/AQAEAAUAAAANAPn/AQAEAAUAAAANAPr/AQAEAAUAAAANAPv/AQAEAAUAAAANAPz/AQAEAAUAAAANAP3/AQAEAAUAAAANAP7/AQAEAAUAAAANAP//AQAEAAUAAAANAAAAAQAEAAUAAAANAAEAAQAEAAUAAAANAAIAAQAEAAUAAAANAAMAAQAEAAUAAAANAAQAAQAEAAUAAAANAAUAAQAEAAUAAAANAAYAAQAEAAUAAAANAAcAAQAEAAUAAAANAAgAAQAEAAUAAAAOAPf/AQAEAAUAAAAOAPj/AQAEAAUAAAAOAPn/AQAEAAUAAAAOAPr/AQAEAAUAAAAOAPv/AQAEAAUAAAAOAPz/AQAEAAUAAAAOAP3/AQAEAAUAAAAOAP7/AQAEAAUAAAAOAP//AQAEAAUAAAAOAAAAAQAEAAUAAAAOAAEAAQAEAAUAAAAOAAIAAQAEAAUAAAAOAAMAAQAEAAUAAAAOAAQAAQAEAAUAAAAOAAUAAQAEAAUAAAAOAAYAAQAEAAUAAAAOAAcAAQAEAAUAAAAOAAgAAQAEAAUAAAAPAPf/AQAEAAUAAAAPAPj/AQAEAAUAAAAPAPn/AQAEAAUAAAAPAPr/AQAEAAUAAAAPAPv/AQAEAAUAAAAPAPz/AQAEAAUAAAAPAP3/AQAEAAUAAAAPAP7/AQAEAAUAAAAPAP//AQAEAAUAAAAPAAAAAQAEAAUAAAAPAAEAAQAEAAUAAAAPAAIAAQAEAAUAAAAPAAMAAQAEAAUAAAAPAAQAAQAEAAUAAAAPAAUAAQAEAAUAAAAPAAYAAQAEAAUAAAAPAAcAAQAEAAUAAAAPAAgAAQAEAAUAAAA=")

[node name="door_1_pos" type="Marker2D" parent="tile" index="1"]
position = Vector2(-93, 214)

[node name="door_2_pos" type="Marker2D" parent="tile" index="2"]
position = Vector2(81, 214)

[node name="Enemys" type="Node2D" parent="." index="2"]
y_sort_enabled = true

[node name="Enemy_generate" parent="Enemys" index="0" instance=ExtResource("3_6gcv5")]

[node name="Enemy_generate2" parent="Enemys" index="1" instance=ExtResource("3_6gcv5")]

[node name="Enemy_generate3" parent="Enemys" index="2" instance=ExtResource("3_6gcv5")]

[node name="Enemy_generate4" parent="Enemys" index="3" instance=ExtResource("3_6gcv5")]
min_spawn_interval = 1.0
max_spawn_interval = 3.0

[node name="Enemy_generate5" parent="Enemys" index="4" instance=ExtResource("3_6gcv5")]
min_spawn_interval = 1.0
max_spawn_interval = 3.0

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 60.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="." index="4"]

[node name="TimerLeft" type="Label" parent="CanvasLayer" index="0"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 40.0
offset_right = 24.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "30"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
